# py_web_module_10_django

./: .gitignore  README.md  pyproject.toml
mysite/mysite/: settings.py
mysite/polls/: views.py
mysite/polls/migrations/: 0001_initial.py
